<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/address_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/address_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/profile_add_name_string"
            android:textAlignment="textStart"
            android:textColor="@color/app_blue"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/address_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/profile_add_mobile_string"
            android:textAlignment="textStart"
            android:textColor="@color/app_blue" />
        <TextView
            android:id="@+id/address_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/profile_add_address_string"
            android:textAlignment="textStart"
            android:textColor="@color/app_blue" />
        <TextView
            android:id="@+id/address_zilla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:visibility="gone"
            android:text="@string/profile_add_zilla_string"
            android:textAlignment="textStart"
            android:textColor="@color/app_blue"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
</android.support.v7.widget.CardView>