<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/history_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:paddingBottom="0dp"
            android:text="@string/history_name_string"
            android:textAlignment="textStart"
            android:textColor="@color/app_blue"
            android:textSize="@dimen/extra_large" />

        <TextView
            android:id="@+id/history_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:paddingBottom="0dp"
            android:text="@string/history_price_string"
            android:textAlignment="textStart"
            android:textColor="@color/app_blue" />

        <TextView
            android:id="@+id/history_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:paddingBottom="0dp"
            android:text="@string/history_unit_string"
            android:textAlignment="textStart"
            android:textColor="@color/app_blue" />

        <TextView
            android:id="@+id/history_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:paddingBottom="0dp"
            android:text="@string/history_time_string"
            android:textAlignment="textStart"
            android:textColor="@color/app_blue" />
    </LinearLayout>
</android.support.v7.widget.CardView>