<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Fragment_Upload_Step2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/upload_image_2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_default_background_banner"
            android:contentDescription="@string/menu_sell"/>

        <Button
            android:id="@+id/upload_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_plus_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/step2_picture_string"
            android:textColor="@color/app_black" />

    </LinearLayout>

    <Button
        android:id="@+id/upload_next2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rectangular_blue_white"
        android:text="@string/next_string"
        android:textAlignment="center"
        android:textColor="@color/app_white"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>