<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-15dp">

            <ImageView
                android:id="@+id/fish_row_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_default_background_banner"
                android:scaleType="fitXY"/>

            <Button
                android:id="@+id/fish_row_add"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:background="@drawable/ic_plus_white"
                android:padding="5dp"
                android:visibility="invisible"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_wave_blue"
            android:baselineAligned="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fish_row_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:padding="2dp"
                android:text="@string/fish_list_price_string"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/fish_row_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="2dp"
                android:text="@string/fish_location_price"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/fish_row_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="2dp"
                android:text="@string/fish_category_price"
                android:textColor="@android:color/white"
                android:textSize="@dimen/extra_small"
                android:maxLines="1"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>